--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,23 @@ PORT=3000
 NODE_ENV=production
 
 # Clé API pour protéger les endpoints
-# Générez une clé sécurisée pour la production
-API_KEY=votre_cle_secrete_ici
+# Générez une clé sécurisée pour la production avec: npm run generate-key
+API_KEY=LSD_@_951_@_les_sandwichs_du_docteur_whatsapp
+
+# Rate Limiting
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
+
+# Security
+CORS_ORIGIN=*
+ALLOWED_IPS=
+
+# Puppeteer Configuration (for Render deployment)
+PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=false
+PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium
+
+# Webhook URL (optional)
+WEBHOOK_URL=
 
 # Exemple de clé sécurisée :
-# API_KEY=sk_live_abc123xyz789
+# API_KEY=sk_live_abc123xyz789def456
