--- a/package.json
+++ b/package.json
@@ -6,16 +6,23 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "node --watch server.js"
+    "dev": "node --watch server.js",
+    "generate-key": "node scripts/generateApiKey.js",
+    "rotate-key": "node scripts/rotateApiKeys.js"
   },
   "keywords": ["whatsapp", "api", "rest", "node", "express"],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
     "morgan": "^1.10.1",
+    "multer": "^1.4.5-lts.1",
+    "qrcode": "^1.5.3",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.34.1"
   },
